--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "graphql-http": "^1.22.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
   }
